--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,7 @@
 body {
    margin: 0;
    background-color: #000;
-   background-image: url("./assets/Background-img.png");
+   background-image: url("../assets/Background-img.png");
    font-family: Arial, Helvetica, sans-serif;
    color: #E6E6E6;
 }
