--- a/CSS/style.css
+++ b/CSS/style.css
@@ -67,15 +67,13 @@ a:visited {
    margin: 10px;
    padding: 10px 20px;
    font-size: 1.7rem;
+   text-align: center;
    font-weight: bold;
    background-color: #FDD608;
    border: 4px solid #AC9101;
    border-radius: 5px;
-   transition: all 0.5s;
-}
-
-.primaryButton:hover {
    cursor: pointer;
+   transition: all 0.5s;
 }
 
 .primaryButton span {
