--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,6 +12,19 @@ body {
    color: #E6E6E6;
 }
 
+.canvasContainer {
+   position: relative;
+}
+
+#bonus-life {
+   position: absolute;
+   top: 2.5rem;
+   left: 10px;
+   color: white;
+   font-size: 20px;
+   z-index: 10;
+}
+
 /* ========== HEADERS ============ */
 h1 {
    position: relative;
@@ -124,7 +137,14 @@ a:visited {
    color: #34343F;
 }
 
-progress {
+#player-health {
+   width: 300px; /* Adjust as needed */
+   height: 20px; /* Adjust as needed */
+   background-color: #eee;
+   border: 1px solid #333;
+ }
+
+/* progress {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
@@ -148,7 +168,7 @@ progress {
  progress[value]::-moz-progress-bar {
    background-color: #a927f5;
    transition: all 0.2s ease-out;
- }
+ } */
 
 .buttonContainer {
    display: flex;
